# ableton-osc-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yaml  mise.toml  pyproject.toml
src/ableton_osc_mcp/: osc_client.py  server.py
tests/: test_osc_client_env.py  test_server.py
